--- a/public/index.html
+++ b/public/index.html
@@ -580,7 +580,7 @@
             // دالة لجمع القيم من الحقول
             const getValue = (id, isFloat = false, isInt = false) => {
                 const element = document.getElementById(id);
-                if (!element) return isInt ? 0 : isFloat ? 0 : '';
+                if (!element || !element.value) return isInt ? 0 : isFloat ? 0 : '';
                 let value = element.value.replace(/,/g, '');
                 return isFloat ? parseFloat(value) || 0 : isInt ? parseInt(value) || 0 : value;
             };
@@ -709,36 +709,122 @@
                 }
 
                 const result = await response.json();
+                if (!result.success) {
+                    throw new Error(result.error || 'فشل معالجة البيانات');
+                }
+
                 const resultContainer = document.getElementById('resultContainer');
                 const resultContent = document.getElementById('resultContent');
 
-                // عرض النتائج
-                resultContent.innerHTML = `
-                    <div class="result-section" id="pdfContent">
-                        <h3>النتائج</h3>
-                        <table>
-                            <tr><th>البيان</th><th>القيمة</th></tr>
-                            <tr><td>الرسالة</td><td>${result.result.message}</td></tr>
-                            <tr><td>البيانات المدخلة</td><td><pre>${JSON.stringify(result.result.inputData, null, 2)}</pre></td></tr>
-                        </table>
-                    </div>
-                `;
+                // عرض رسالة "تم المعالجة" فقط
+                resultContent.innerHTML = `<p style="font-size: 1rem; font-weight: 600; text-align: center;">تم المعالجة</p>`;
                 resultContainer.style.display = 'block';
 
-                // إعداد زر تحميل PDF
+                // إعداد زر تحميل PDF مع جميع البيانات المعالجة
                 document.getElementById('downloadPdf').onclick = () => {
-                    const pdfContent = document.getElementById('pdfContent').innerHTML;
+                    // دالة لإنشاء جدول HTML من كائن مع دعم الكائنات المتداخلة
+                    const createTable = (title, data) => {
+                        let html = `<h3 style="margin-bottom: 10px;">${title}</h3><table><tr><th>البيان</th><th>القيمة</th></tr>`;
+                        for (const [key, value] of Object.entries(data)) {
+                            // تحويل القيم العددية إلى أرقام ثابتة إذا لزم الأمر
+                            let displayValue = typeof value === 'number' ? value.toFixed(2) : value;
+                            if (typeof value === 'object' && value !== null) {
+                                displayValue = `<pre style="margin: 0; white-space: pre-wrap;">${JSON.stringify(value, null, 2)}</pre>`;
+                            }
+                            html += `<tr><td>${key}</td><td>${displayValue}</td></tr>`;
+                        }
+                        html += `</table>`;
+                        return html;
+                    };
+
+                    // تنسيق البيانات للـ PDF مع صفحات منفصلة
+                    let pdfContent = `
+                        <h2 style="text-align: center; margin-bottom: 20px;">تقرير تكاليف البناء</h2>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('الرسالة', { message: result.result.message })}
+                        </div>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('البيانات المدخلة', result.result.inputData || {})}
+                        </div>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('الكميات', result.result.quantities || {})}
+                        </div>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('الأوزان', result.result.weights || {})}
+                        </div>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('الأساس', result.result.foundation || {})}
+                        </div>
+                        <div class="result-section" style="page-break-after: always;">
+                            ${createTable('التكاليف', result.result.costs || {})}
+                        </div>
+                        <div class="result-section">
+                            ${createTable('بيانات PDF', result.result.pdfData || {})}
+                        </div>
+                    `;
+
                     const pdfWindow = window.open('');
                     pdfWindow.document.write(`
                         <html dir="rtl">
-                        <head><title>تقرير تكاليف البناء</title>
+                        <head>
+                            <title>تقرير تكاليف البناء</title>
+                            <meta charset="UTF-8">
+                            <meta name="viewport" content="width=device-width, initial-scale=1.0">
                             <style>
-                                body { font-family: 'Tajawal', sans-serif; padding: 10px; background: #FFF6E6; color: #2A2A2A; }
-                                h3 { color: #5C4033; font-size: 1rem; font-weight: 600; }
-                                table { width: 100%; border-collapse: collapse; font-size: 0.75rem; }
-                                th, td { padding: 6px; text-align: right; border-bottom: 1px solid #E4E2DB; }
-                                th { background: rgba(92, 64, 51, 0.1); color: #5C4033; }
-                                pre { white-space: pre-wrap; background: rgba(255, 245, 235, 0.95); padding: 5px; border-radius: 5px; }
+                                @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap');
+                                body { 
+                                    font-family: 'Tajawal', sans-serif; 
+                                    padding: 20px; 
+                                    background: #FFF6E6; 
+                                    color: #2A2A2A; 
+                                    line-height: 1.5; 
+                                    direction: rtl;
+                                }
+                                h2 { 
+                                    color: #5C4033; 
+                                    font-size: 1.2rem; 
+                                    font-weight: 700; 
+                                    text-align: center; 
+                                }
+                                h3 { 
+                                    color: #5C4033; 
+                                    font-size: 1rem; 
+                                    font-weight: 600; 
+                                    margin-bottom: 10px; 
+                                }
+                                table { 
+                                    width: 100%; 
+                                    border-collapse: collapse; 
+                                    font-size: 0.75rem; 
+                                    margin-bottom: 20px; 
+                                }
+                                th, td { 
+                                    padding: 8px; 
+                                    text-align: right; 
+                                    border-bottom: 1px solid #E4E2DB; 
+                                }
+                                th { 
+                                    background: rgba(92, 64, 51, 0.1); 
+                                    color: #5C4033; 
+                                }
+                                pre { 
+                                    white-space: pre-wrap; 
+                                    background: rgba(255, 245, 235, 0.95); 
+                                    padding: 5px; 
+                                    border-radius: 5px; 
+                                    font-size: 0.7rem; 
+                                }
+                                .result-section { 
+                                    margin-bottom: 20px; 
+                                }
+                                @media print { 
+                                    .result-section { 
+                                        page-break-after: always; 
+                                    }
+                                    .result-section:last-child { 
+                                        page-break-after: avoid; 
+                                    }
+                                }
                             </style>
                         </head>
                         <body>${pdfContent}</body>
@@ -749,7 +835,7 @@
                 };
             } catch (error) {
                 // عرض الأخطاء إذا حدثت
-                document.getElementById('resultContent').innerHTML = `<p style="color: #C75656;">خطأ: ${error.message}</p>`;
+                document.getElementById('resultContent').innerHTML = `<p style="color: #C75656; text-align: center;">خطأ: ${error.message}</p>`;
                 document.getElementById('resultContainer').style.display = 'block';
             } finally {
                 // إعادة تعيين زر الإرسال
