--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>نظام حساب تكاليف البناء - العراق</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script>
+        // تحميل خط Amiri (يجب توفير ملف الخط أو رابط CDN)
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+        doc.addFileToVFS('Amiri-Regular.ttf', '/* بيانات الخط base64 */');
+        doc.addFont('Amiri-Regular.ttf', 'Amiri', 'normal');
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.3/jspdf.plugin.autotable.min.js"></script>
     <!-- إضافة خط Amiri لدعم النصوص العربية -->
     <script src="https://unpkg.com/@jspdf/font-amiri@latest/Amiri-Regular.js"></script>
@@ -100,72 +114,7 @@
                 <h2><span class="material-icons-outlined">calculate</span> حاسبة تكاليف البناء</h2>
                 <p>أدخل تفاصيل المشروع لتقدير التكلفة</p>
             </div>
-const { jsPDF } = window.jspdf;
-const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4' });
-doc.setFontSize(12);
-doc.setTextColor(40, 40, 40);
-
-// الصفحة الأولى: نبذة عن الشركة
-let yOffset = 10;
-doc.text('نبذة عن الشركة', 10, yOffset);
-
-// بدء صفحة جديدة
-if (yOffset > 270) {
-    doc.addPage();
-    yOffset = 10;
-}
-
-// الصفحة الثانية: البيانات المدخلة
-yOffset += 10;
-doc.text('البيانات المدخلة', 10, yOffset);
-
-// بدء صفحة جديدة
-if (yOffset > 270) {
-    doc.addPage();
-    yOffset = 10;
-}
-
-// الصفحة الثالثة: الكميات
-yOffset += 10;
-doc.text('الكميات', 10, yOffset);
-
-// بدء صفحة جديدة
-if (yOffset > 270) {
-    doc.addPage();
-    yOffset = 10;
-}
-
-// الصفحة الرابعة: الحسابات الإنشائية
-yOffset += 10;
-doc.text('الحسابات الإنشائية', 10, yOffset);
-
-// بدء صفحة جديدة
-if (yOffset > 270) {
-    doc.addPage();
-    yOffset = 10;
-}
-
-// الصفحة الخامسة: قائمة الأسعار
-yOffset += 10;
-doc.text('قائمة الأسعار', 10, yOffset);
-
-// بدء صفحة جديدة
-if (yOffset > 270) {
-    doc.addPage();
-    yOffset = 10;
-}
-
-// الصفحة السادسة: قائمة أسعار المواد
-yOffset += 10;
-doc.text('قائمة أسعار المواد', 10, yOffset);
-
-// حفظ ملف PDF
-const savePDF = () => {
-    doc.save('التقرير.pdf');
-};
-
-// استدعاء دالة الحفظ عند الحاجة
-savePDF();            <form id="buildingForm">
+            <form id="buildingForm">
                 <div class="form-section">
                     <h3><span class="material-icons-outlined">person</span> معلومات الزبون</h3>
                     <div class="form-row">
@@ -579,13 +528,12 @@ savePDF();            <form id="buildingForm">
                 </div>
             </form>
         </div>
-        <div id="successMessage" style="display:none; color:green; margin:20px 0;">
-          تم الحساب بنجاح
-        </div>
-        
-        <button id="downloadPdfBtn" style="display:none; background:#4CAF50; color:white; padding:10px 20px; border:none; border-radius:4px;">
-          تحميل التقرير PDF
-        </button>
+        <div id="resultContainer" class="result-container hidden">
+            <div class="result-header">
+                <h3><span class="material-icons-outlined">assessment</span> نتيجة الحساب</h3>
+            </div>
+            <div id="resultContent" class="result-content"></div>
+            <button id="downloadPdf" class="btn btn-primary"><span class="material-icons-outlined">picture_as_pdf</span> تحميل PDF</button>
         </div>
     </div>
     <script>
@@ -699,7 +647,7 @@ savePDF();            <form id="buildingForm">
                     internalWallsInfo: document.getElementById('mapDetailsInfo').classList.contains('hidden') ? false : !document.getElementById('internalWallsInfo').classList.contains('hidden')
                 };
 
-                // جمع بيانات الواجهة المخصصة
+                // جمع بيانات,: الواجهة المخصصة
                 if (inputs.customFacadeInfo) {
                     inputs.building.facadeArea = getValue('facadeArea', true);
                     inputs.building.facadePrice = getValue('facadePrice', true);
@@ -777,111 +725,163 @@ savePDF();            <form id="buildingForm">
 
                 const result = await response.json();
 
-                // إظهار رسالة المعالجة في قسم النتائج
+                // التحقق من نجاح الاستجابة
+                if (!result.success || !result.result || !result.result.success || !result.result.pdfData) {
+                    throw new Error(result.result?.message || 'فشل معالجة البيانات أو pdfData غير موجود');
+                }
+
+                // عرض رسالة النجاح فقط
                 resultContent.innerHTML = `
                     <div class="result-section">
-                        <h3><span class="material-icons-outlined">check_circle</span> تم المعالجة</h3>
-                        <p>تم المعالجة، والبيانات ستكون مباشرة في ملف PDF</p>
+                        <h3><span class="material-icons-outlined">check_circle</span> تم الحساب بنجاح</h3>
+                        <p>اضغط على الزر أدناه لتحميل ملف PDF</p>
                     </div>
                 `;
                 resultContainer.classList.remove('hidden');
 
-                // إنشاء ملف PDF باستخدام jsPDF
-                const { jsPDF } = window.jspdf;
-                const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4' });
-                doc.setFontSize(12);
-                doc.setTextColor(40, 40, 40);
+                // إنشاء ملف PDF عند الضغط على زر التحميل
+                document.getElementById('downloadPdf').addEventListener('click', () => {
+                    const { jsPDF } = window.jspdf;
+                    const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4' });
 
-                let yOffset = 10;
+                    // إعداد الخط لدعم اللغة العربية
+                    doc.setFont('Amiri', 'normal'); // يفترض أن خط Amiri مُحمل في <head>
+                    doc.setFontSize(12);
+                    doc.setTextColor(40, 40, 40);
 
-                // إضافة العنوان
-                doc.text('تقرير تكاليف البناء', 105, yOffset, { align: 'center' });
-                yOffset += 10;
+                    const pdfData = result.result.pdfData;
+                    let yOffset = 10;
+                    const pageHeight = 270; // ارتفاع الصفحة (A4 ≈ 297mm، نترك هامش)
+                    const lineHeight = 7;
 
-                // معلومات العميل
-                doc.text('معلومات العميل', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.inputData.customer.fields.forEach(field => {
-                    doc.text(`${field.label}: ${field.value}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
+                    // دالة لإضافة صفحة جديدة إذا لزم الأمر
+                    const addNewPageIfNeeded = () => {
+                        if (yOffset > pageHeight) {
+                            doc.addPage();
+                            yOffset = 10;
+                        }
+                    };
 
-                // معلومات الموقع
-                yOffset += 5;
-                doc.text('معلومات الموقع', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.inputData.location.fields.forEach(field => {
-                    doc.text(`${field.label}: ${field.value}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
+                    // العنوان
+                    doc.text('تقرير تكاليف البناء', 105, yOffset, { align: 'center' });
+                    yOffset += 10;
 
-                // معلومات الأرض
-                yOffset += 5;
-                doc.text('معلومات الأرض', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.inputData.land.fields.forEach(field => {
-                    doc.text(`${field.label}: ${field.value} ${field.unit}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
-
-                // تفاصيل المبنى
-                yOffset += 5;
-                doc.text('تفاصيل المبنى', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.inputData.building.fields.forEach(field => {
-                    doc.text(`${field.label}: ${field.value} ${field.unit || ''}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
-
-                // الكميات
-                yOffset += 5;
-                doc.text('الكميات', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.quantities.sections.forEach(section => {
-                    doc.text(section.subtitle, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                    section.items.forEach(item => {
-                        doc.text(`${item.name}: ${item.value} ${item.unit}`, 190, yOffset, { align: 'right' });
-                        yOffset += 5;
+                    // 1. معلومات الشركة (صفحة جديدة)
+                    doc.addPage();
+                    yOffset = 10;
+                    doc.text('معلومات الشركة', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.companyInfo.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value}`, 200, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
                     });
-                    yOffset += 3;
-                });
 
-                // الحسابات الإنشائية
-                yOffset += 5;
-                doc.text('الحسابات الإنشائية', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.engineering.sections.forEach(section => {
-                    doc.text(section.subtitle, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                    section.items.forEach(item => {
-                        doc.text(`${item.name}: ${item.value} ${item.unit}`, 190, yOffset, { align: 'right' });
-                        yOffset += 5;
+                    // 2. بيانات المدخلات (صفحة جديدة)
+                    doc.addPage();
+                    yOffset = 10;
+
+                    // معلومات العميل
+                    doc.text('معلومات العميل', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.inputData.customer.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
                     });
-                    yOffset += 3;
-                });
 
-                // التكاليف
-                yOffset += 5;
-                doc.text('التكاليف', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.costs.items.forEach(item => {
-                    doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
-                doc.text(`الإجمالي: ${result.pdfData.costs.total.toLocaleString()} د.ع`, 200, yOffset, { align: 'right' });
+                    // معلومات الموقع
+                    yOffset += lineHeight;
+                    doc.text('معلومات الموقع', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.inputData.location.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
+                    });
 
-                // أسعار المواد
-                yOffset += 10;
-                doc.text('أسعار المواد', 200, yOffset, { align: 'right' });
-                yOffset += 5;
-                result.pdfData.materialPrices.forEach(item => {
-                    doc.text(`${item.material}: ${item.price.toLocaleString()} ${item.unit}`, 200, yOffset, { align: 'right' });
-                    yOffset += 5;
-                });
+                    // معلومات الأرض
+                    yOffset += lineHeight;
+                    doc.text('معلومات الأرض', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.inputData.land.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value} ${field.unit || ''}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
+                    });
 
-                // حفظ وتنزيل ملف PDF
-                doc.save(`تقرير_تكاليف_البناء_${new Date().toISOString().split('T')[0]}.pdf`);
+                    // تفاصيل المبنى
+                    yOffset += lineHeight;
+                    doc.text('تفاصيل المبنى', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.inputData.building.fields.forEach(field => {
+                        doc.text(`${field.label}: ${field.value} ${field.unit || ''}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
+                    });
+
+                    // 3. الكميات (صفحة جديدة، قد تحتاج صفحتين)
+                    doc.addPage();
+                    yOffset = 10;
+                    doc.text('الكميات', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.quantities.sections.forEach(section => {
+                        doc.text(section.subtitle, 200, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        section.items.forEach(item => {
+                            doc.text(`${item.name}: ${item.value} ${item.unit || ''}`, 190, yOffset, { align: 'right' });
+                            yOffset += lineHeight;
+                            addNewPageIfNeeded();
+                        });
+                        yOffset += 3;
+                        addNewPageIfNeeded();
+                    });
+
+                    // 4. الحسابات الإنشائية (صفحة جديدة، قد تحتاج صفحتين)
+                    doc.addPage();
+                    yOffset = 10;
+                    doc.text('الحسابات الإنشائية', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.engineering.sections.forEach(section => {
+                        doc.text(section.subtitle, 200, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        section.items.forEach(item => {
+                            doc.text(`${item.name}: ${item.value} ${item.unit || ''}`, 190, yOffset, { align: 'right' });
+                            yOffset += lineHeight;
+                            addNewPageIfNeeded();
+                        });
+                        yOffset += 3;
+                        addNewPageIfNeeded();
+                    });
+
+                    // 5. التكاليف (صفحة جديدة)
+                    doc.addPage();
+                    yOffset = 10;
+                    doc.text('التكاليف', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.costs.items.forEach(item => {
+                        doc.text(`${item.name}: ${item.value.toLocaleString()} ${item.unit}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
+                    });
+                    doc.text(`الإجمالي: ${pdfData.costs.total.toLocaleString()} د.ع`, 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    addNewPageIfNeeded();
+
+                    // 6. أسعار المواد (صفحة جديدة)
+                    doc.addPage();
+                    yOffset = 10;
+                    doc.text('أسعار المواد', 200, yOffset, { align: 'right' });
+                    yOffset += lineHeight;
+                    pdfData.materialPrices.forEach(item => {
+                        doc.text(`${item.material}: ${item.price.toLocaleString()} ${item.unit}`, 190, yOffset, { align: 'right' });
+                        yOffset += lineHeight;
+                        addNewPageIfNeeded();
+                    });
+
+                    // حفظ وتنزيل ملف PDF
+                    doc.save(`تقرير_تكاليف_البناء_${new Date().toISOString().split('T')[0]}.pdf`);
+                }, { once: true }); // مرة واحدة فقط لكل نقرة
 
             } catch (error) {
                 // عرض رسالة الخطأ في قسم النتائج
